--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/yuriBrandaoS/gerenic-api#readme",
   "dependencies": {
     "debug": "^4.1.1",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
